--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - external
 
   postgres:
-    container_name: postgres
+    container_name: postgres-container
     image: postgres:alpine
     env_file: .env
     restart: always
