--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     networks:
       - external
 
-  postgres:
+  database:
     container_name: postgres-container
     image: postgres:alpine
     env_file: .env
@@ -33,19 +33,10 @@ services:
     networks:
       - internal
     volumes:
-      - database:/data/database
-
-  adminer:
-    container_name: adminer
-    image: adminer
-    restart: always
-    ports:
-      - 8082:8080
-    networks:
-      - internal
+      - database_volume:/data/database_volume
 
 volumes:
-  database:
+  database_volume:
 
 networks:
   internal:
