--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:18-alpine AS builder
+FROM node:16-alpine AS builder
 
 WORKDIR /app
 COPY package*.json ./
@@ -7,7 +7,7 @@ COPY . ./
 RUN npm run build
 
 
-FROM nginx:alpine AS runner
+FROM nginx:latest AS runner
 
 WORKDIR /app
 COPY --from=builder /app/build /usr/share/nginx/html
